@@ -1,5 +1,8 @@
 2004-10-28  Vincent Noel  <vnoel@cox.net>
 
+	* about.c (AboutShowWindow): use the very convenient
+	gtk_about_show_dialog.
+
 	* monitor.c (mon_check_logs):
 	* info.c: Remove unnecessary casts.
 
